--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "antd-style": "^3.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
     "typescript": "^4.4.2",
