Update .prettierignore and .prettierrc.yaml for improved formatting and file exclusions
- Added new file exclusions to .prettierignore for frontend/build/**, frontend/pnpm-lock.yaml, and various vocabulary files.
- Updated .prettierrc.yaml to include filepath, singleAttributePerLine, and jsxSingleQuote settings, while maintaining existing formatting rules.

--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -1,7 +1,8 @@
-semi: false
-singleQuote: true
-trailingComma: all
-tabWidth: 2
-singleAttributePerLine: true
-jsxSingleQuote: true
 filepath: frontend/**
+jsxSingleQuote: true
+printWidth: 80
+semi: false
+singleAttributePerLine: true
+singleQuote: true
+tabWidth: 2
+trailingComma: all
