--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,10 @@
 frontend/public/llm/**
-web/**
-tsconfig.json
-pkg/**
+frontend/build/**
 package.json
+pkg/**
+tsconfig.json
+web/**
+frontend/pnpm-lock.yaml
+rwkv_vocab_v20230424.json
+puzzle15_vocab.json
+abctokenizer_vocab.json
