--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -2,7 +2,7 @@ filepath: frontend/**
 jsxSingleQuote: true
 printWidth: 80
 semi: false
-singleAttributePerLine: true
+singleAttributePerLine: false
 singleQuote: true
 tabWidth: 2
 trailingComma: all
