--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "abcjs": "^6.4.4",
     "antd": "^5.22.5",
     "antd-style": "^3.7.1",
     "autoprefixer": "^10.4.20",
