--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ itertools = "0.13"
 js-sys = "0.3"
 lazy_static = "1.5"
 log = "0.4"
+qp-trie = "0.8"
 regex = "1.10"
 safetensors = "0.4"
 serde = { version = "1", features = ["derive"] }
