--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@ant-design/charts": "^2.2.6",
     "@ant-design/x": "^1.0.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -17,6 +18,9 @@
     "antd": "^5.22.5",
     "antd-style": "^3.7.1",
     "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.469.0",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -26,7 +30,9 @@
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
     "soundfont-player": "^0.12.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
