--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "@ant-design/charts": "^2.2.6",
     "@ant-design/x": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
