--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,10 +39,10 @@ jobs:
           node-version: '>=20.0'
       - name: Install Tools
         run: |
-          npm install --global yarn
+          npm install --global pnpm
           npm install --global typescript
       - name: Install Dependencies
-        run: yarn install
+        run: pnpm install
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
@@ -56,13 +56,6 @@ jobs:
           # RUSTFLAGS=--cfg=web_sys_unstable_apis wasm-pack build --release --target no-modules
           # npx tsc
           bash build.bash
-      - name: Clean
-        run: |
-          rm -r src/
-          rm -r target/
-          rm -r web/*.ts
-          rm -r *.cmd
-          rm -r *.bash
       # - name: Deploy with gh-pages
       #   run: |
       #     git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
