--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "homepage": "https://cryscan.github.io/web-rwkv-puzzles",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@ant-design/charts": "^2.2.6",
