--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ anyhow = "1"
 base64 = "0.22.1"
 bitflags = "2.8"
 bytemuck = { version = "1.17", features = ["extern_crate_alloc"] }
+cbor4ii = "1.0.0"
 derive-getters = "0.5"
 fastrand = { version = "2.1", features = ['js'] }
 flume = "0.11"
@@ -45,7 +46,7 @@ web-sys = { version = "0.3", features = ["Blob", "console"] }
 default-features = false
 features = ["web"]
 # path = "../web-rwkv"
-version = "0.10.7"
+version = "0.10.8"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
